--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -41,6 +41,10 @@ variables:
 - name: LOKI_FORCE_DESTROY
   description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data, overrides ephemeral setting"
 
+- name: EXEMPT_NAMESPACES
+  description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
+  default: '[ "zarf", "calico-apiserver", "calico-system", "tigera-operator" ]'
+
 components:
   - name: set-ephemeral
     required: true
