--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -43,6 +43,10 @@ variables:
   - name: LOKI_FORCE_DESTROY
     description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data, overrides ephemeral setting"
 
+  - name: EXEMPT_NAMESPACES
+    description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
+    default: '[ "zarf", "calico-apiserver", "calico-system", "tigera-operator" ]'
+
   - name: VPC_CIDR
     description: "VPC CIDR block"
   - name: VPC_ID
