feat: initial oscal ci

--- a/.github/workflows/oscal/ci-on-pull-request-oscal-component.yaml
+++ b/.github/workflows/oscal/ci-on-pull-request-oscal-component.yaml
@@ -1,4 +1,4 @@
-name: CI DUBBD AWS
+name: CI DUBBD OSCAL
 
 on:
   pull_request:
@@ -11,16 +11,12 @@ on:
       - "**/*.json"
       - "**/*.png"
       - "**/*.svg"
-      - "aws/uds-core-aws/**"
+      # - "aws/uds-core-aws/**" #Not 100% sure yet, may need to remove this since oscal is going to go there too.
       - "aws/cloudtrail/**"
       - "k3d/**"
-      - "oscal-component.y*ml"
-      -  aws/dubbd-aws/oscal-component.y@ml
-      -  aws/uds-core-aws/oscal-component.y@ml
       - ".github/workflows/*k3d*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
-      - ".github/workflows/oscal/*oscal-component.y*ml"
 
   workflow_call:
 
