updated after local testing.

--- a/.github/workflows/ci-on-pull-request-uds-oscal-component.yaml
+++ b/.github/workflows/ci-on-pull-request-uds-oscal-component.yaml
@@ -20,7 +20,7 @@ on:
   workflow_call:
 
 jobs:
-    test-release:
+    test-release-oscal:
         uses: ./.github/workflows/test-uds-oscal-component.yaml
         secrets: inherit
 
