--- a/.github/workflows/oscal/config-dubbd-oscal-component.yaml
+++ b/.github/workflows/oscal/config-dubbd-oscal-component.yaml
@@ -12,5 +12,5 @@ metadata: # OSCAL-compliant metadata
       type: organization
 components: # Define paths on the local filesystem or remote paths in git repositories to OSCAL component definition files
     remote:
-    - git: hhttps://repo1.dso.mil/big-bang/bigbang.git@2.5.0
+    - git: https://repo1.dso.mil/big-bang/bigbang.git@2.5.0
       path: oscal-component.yaml
