--- a/.github/workflows/test-uds-oscal-component.yaml
+++ b/.github/workflows/test-uds-oscal-component.yaml
@@ -46,6 +46,6 @@ jobs:
           git add oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml
           git commit -m "Add OSCAL"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git push origin ${{ github.ref }}
+          git push origin ${{ github.head_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
