--- a/.github/workflows/test-uds-oscal-component.yaml
+++ b/.github/workflows/test-uds-oscal-component.yaml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config --global user.email "no-reply@github.com"
           git config --global user.name "GitHub Actions"
-          git add oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml
+          git add .
           git commit -m "Add OSCAL"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git push origin ${{ github.head_ref }}
