--- a/.github/workflows/test-uds-oscal-component.yaml
+++ b/.github/workflows/test-uds-oscal-component.yaml
@@ -43,6 +43,7 @@ jobs:
         run: |
           git config --global user.email "no-reply@github.com"
           git config --global user.name "GitHub Actions"
+          git checkout -b ${{ github.head_ref }} || git checkout ${{ github.head_ref }}
           git add .
           git commit -m "Add OSCAL"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
