feat: add velero files to new branch
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/ci-on-pull-request-uds-core-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-uds-core-aws.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - "aws/eks/**"
-      - "aws/uds-core-aws"
+      - "aws/uds-core-aws/**"
       - "!**/*.md"
       - ".github/workflows/ci-on-pull-request-uds-core-aws.yaml"
   workflow_call:
