feat: add dubbd pre-upgrade & update refs

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -225,11 +225,15 @@ components:
     required: true
     import:
       path: ../../defense-unicorns-distro
+  - name: download-flux
+    required: true
+    import:
+      path: ../../defense-unicorns-distro
   - name: preflight
     required: true
     import:
       path: ../../defense-unicorns-distro
-  - name: download-flux
+  - name: dubbd-pre-upgrade
     required: true
     import:
       path: ../../defense-unicorns-distro
@@ -277,7 +281,7 @@ components:
     required: true
     import:
       path: ../external-dns
-  - name: dubbd-upgrade
+  - name: dubbd-post-upgrade
     required: true
     actions:
       onDeploy:
