--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -25,11 +25,15 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: download-flux
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: preflight
     required: true
     import:
       path: ../defense-unicorns-distro
-  - name: download-flux
+  - name: dubbd-pre-upgrade
     required: true
     import:
       path: ../defense-unicorns-distro
@@ -42,3 +46,7 @@ components:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
         valuesFiles:
         - values/local-dev.yaml
+  - name: dubbd-post-upgrade
+    required: true
+    import:
+      path: ../defense-unicorns-distro
