feat: add dubbd pre-upgrade & update refs

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -79,21 +79,6 @@ components:
               sensitive: true
         - cmd: rm cat_certs.sh
         - cmd: rm cat_key.sh
-  - name: preflight
-    required: true
-    actions:
-      onDeploy:
-        before:
-        - cmd: "./zarf tools kubectl version --short || true"
-          setVariables:
-            - name: OUTPUT
-        after:
-        - cmd: ./preflight.sh
-        - cmd: rm preflight.sh
-    files:
-    - source: scripts/preflight.sh
-      target: preflight.sh
-      executable: true
   - name: download-flux
     required: true
     actions:
@@ -121,6 +106,41 @@ components:
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_amd64.zip
       - source: https://github.com/fluxcd/flux2/releases/download/v###ZARF_PKG_TMPL_FLUX_VERSION###/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
+  - name: preflight
+    required: true
+    actions:
+      onDeploy:
+        before:
+        - cmd: "./zarf tools kubectl version --short || true"
+          setVariables:
+            - name: OUTPUT
+        - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
+          mute: true
+          description: "Detect if this is an upgrade"
+          setVariables:
+            - name: IS_UPGRADE
+        after:
+        - cmd: ./preflight.sh
+        - cmd: rm preflight.sh
+    files:
+    - source: scripts/preflight.sh
+      target: preflight.sh
+      executable: true
+  - name: dubbd-pre-upgrade
+    required: true
+    actions:
+      onDeploy:
+        before:
+        - cmd: |
+            if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+              echo "Performing pre-upgrade steps" >/dev/null 2>&1
+            fi
+          description: "Perform DUBBD pre-upgrade steps"
+        - cmd: |
+            if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+              ./zarf tools kubectl delete helmrelease -n bigbang kyverno-policies --ignore-not-found --timeout=20m
+            fi
+          description: "Remove kyverno-policies Helm Release before upgrading to Kyverno 1.9.2"
   - name: bigbang
     required: true
     actions:
@@ -214,3 +234,13 @@ components:
         - ../values/monitoring.yaml
         - ../values/neuvector.yaml
         - ../values/tempo.yaml
+  - name: dubbd-post-upgrade
+    required: true
+    actions:
+      onDeploy:
+        before:
+        - cmd: |
+            if [ "${ZARF_VAR_IS_UPGRADE}" = "true" ]; then
+              echo "Performing pre-upgrade steps" >/dev/null 2>&1
+            fi
+          description: "Perform DUBBD post-upgrade steps"
