--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -49,8 +49,7 @@ components:
               ls -lath *.zst downloads
       onDeploy:
         after:
-          - cmd: |
-              zarf package deploy init.tar.zst --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn
+          - cmd: "./zarf package deploy init.tar.zst --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn"
   - name: metallb
     required: true
     files:
@@ -75,4 +74,4 @@ components:
         after:
           - cmd: |
               echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME has been zarf initialized:"
-              (set -x; zarf tools kubectl config view; zarf tools kubectl get pods -A)
+              (set -x; ./zarf tools kubectl config view; ./zarf tools kubectl get pods -A)
