--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -193,7 +193,9 @@ components:
               ./zarf tools kubectl delete helmrelease -n bigbang kiali --ignore-not-found --timeout=20m
               ./zarf tools kubectl delete helmrelease -n bigbang metrics-server --ignore-not-found --timeout=20m
               ./zarf tools kubectl delete apiservices.apiregistration.k8s.io -l helm.toolkit.fluxcd.io/namespace=bigbang,helm.toolkit.fluxcd.io/name=metrics-server --ignore-not-found --timeout=20m
-              ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang --timeout=20m
+              ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang --ignore-not-found --timeout=20m
+              ./zarf tools kubectl delete helmrelease -n bigbang bigbang --ignore-not-found --timeout=20m
+              ./zarf tools kubectl delete gitrepositories -n bigbang bigbang --ignore-not-found --timeout=20m
             description: "Cleaning up Big Bang resources"
             maxTotalSeconds: 3600 # 1 hour
     files:
