--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -40,7 +40,7 @@ variables:
   default: "false"
 - name: LOKI_FORCE_DESTROY
   description: "If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket. Overrides ephemeral setting."
-- name: PVC_POLICY
+- name: PVC_RECLAIM_POLICY
   description: "Affects DUBBD's default storage class reclaimPolicy, either `Retain` or `Delete`. No effect if EBS CSI Driver is not installed. Overrides ephemeral setting."
 
 - name: EXEMPT_NAMESPACES
@@ -63,18 +63,18 @@ components:
             setVariables:
               - name: LOKI_FORCE_DESTROY
           - cmd: |
-              if [ -z "${ZARF_VAR_PVC_POLICY}" ]; then
+              if [ -z "${ZARF_VAR_PVC_RECLAIM_POLICY}" ]; then
                 if [ "${ZARF_VAR_EPHEMERAL}" = "true" ]; then
                   echo "Delete"
                 else
                   echo "Retain"
                 fi
               else
-                echo "${ZARF_VAR_PVC_POLICY}"
+                echo "${ZARF_VAR_PVC_RECLAIM_POLICY}"
               fi
             mute: true
             setVariables:
-              - name: PVC_POLICY
+              - name: PVC_RECLAIM_POLICY
   - name: download-terraform
     required: true
     actions:
