--- a/aws/uds-core-aws/zarf.yaml
+++ b/aws/uds-core-aws/zarf.yaml
@@ -42,7 +42,7 @@ variables:
     default: "false"
   - name: LOKI_FORCE_DESTROY
     description: "If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket. Overrides ephemeral setting."
-  - name: PVC_POLICY
+  - name: PVC_RECLAIM_POLICY
     description: "Affects DUBBD's default storage class reclaimPolicy, either `Retain` or `Delete`. No effect if EBS CSI Driver is not installed. Overrides ephemeral setting."
 
   - name: EXEMPT_NAMESPACES
