feat: updated loki to consume s3/irsa module split
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -128,7 +128,7 @@ components:
             setVariables:
               - name: STATE_KEY_LOKI
           - cmd: |
-              terraform init -force-copy \
+              ../terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
               -backend-config="key=${ZARF_VAR_STATE_KEY_LOKI}" \
               -backend-config="region=${ZARF_VAR_REGION}" \
@@ -198,7 +198,7 @@ components:
               - name: STATE_KEY_VELERO
           - cmd: "echo ${ZARF_VAR_STATE_KEY_VELERO}"
           - cmd: |
-              terraform init -force-copy \
+              ../terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
               -backend-config="key=${ZARF_VAR_STATE_KEY_VELERO}" \
               -backend-config="region=${ZARF_VAR_REGION}" \
