fix: kyverno val change & rm an update check cmd

--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -1,3 +1,9 @@
+kyverno:
+  values:
+    updateStrategy:
+      rollingUpdate:
+        maxUnavailable: 0
+
 kyvernoPolicies:
   values:
     exclude:
