feat: add dubbd pre-upgrade & update refs (#411)
* feat: add dubbd pre-upgrade & update refs

* fix: update some verbiage [ci skip]

* fix: update output for upgrade steps

* fix: ordering of zarf components

* fix: ordering of zarf components

* fix: removing placeholder cmd from zarf component

* fix: kyverno val change & rm an update check cmd

--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -21,15 +21,19 @@ variables:
   prompt: false
 
 components:
-  - name: load-certs
-    required: true
-    import:
-      path: ../defense-unicorns-distro
   - name: preflight
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: load-certs
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: download-flux
+    required: true
+    import:
+      path: ../defense-unicorns-distro
+  - name: dubbd-pre-upgrade
     required: true
     import:
       path: ../defense-unicorns-distro
@@ -42,3 +46,7 @@ components:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
         valuesFiles:
         - values/local-dev.yaml
+  - name: dubbd-post-upgrade
+    required: true
+    import:
+      path: ../defense-unicorns-distro
