--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -49,6 +49,26 @@ variables:
   description: Slack channel for alerts
 
 components:
+  - name: preflight
+    required: true
+    actions:
+      onDeploy:
+        before:
+        - cmd: "./zarf tools kubectl version --short || true"
+          setVariables:
+            - name: OUTPUT
+        - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
+          mute: true
+          description: "Detect if this is an upgrade"
+          setVariables:
+            - name: IS_UPGRADE
+        after:
+        - cmd: ./preflight.sh
+        - cmd: rm preflight.sh
+    files:
+    - source: scripts/preflight.sh
+      target: preflight.sh
+      executable: true
   - name: load-certs
     required: true
     files:
@@ -79,21 +99,6 @@ components:
               sensitive: true
         - cmd: rm cat_certs.sh
         - cmd: rm cat_key.sh
-  - name: preflight
-    required: true
-    actions:
-      onDeploy:
-        before:
-        - cmd: "./zarf tools kubectl version --short || true"
-          setVariables:
-            - name: OUTPUT
-        after:
-        - cmd: ./preflight.sh
-        - cmd: rm preflight.sh
-    files:
-    - source: scripts/preflight.sh
-      target: preflight.sh
-      executable: true
   - name: download-flux
     required: true
     actions:
@@ -121,6 +126,8 @@ components:
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_amd64.zip
       - source: https://github.com/fluxcd/flux2/releases/download/v###ZARF_PKG_TMPL_FLUX_VERSION###/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
+  - name: dubbd-pre-upgrade
+    required: true
   - name: bigbang
     required: true
     actions:
@@ -132,11 +139,6 @@ components:
               ./zarf tools kubectl label ns -l app.kubernetes.io/part-of=bigbang zarf.dev/agent-
             description: "Remove Zarf ignore namespace labels for Big Bang"
             mute: true
-          - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
-            mute: true
-            description: "Detect if this is an upgrade"
-            setVariables:
-              - name: IS_UPGRADE
           - cmd: ./flux suspend source git bigbang -n bigbang --verbose --timeout=5m || true
             dir: run/flux
             description: "Suspend Big Bang GitRepository"
@@ -214,3 +216,5 @@ components:
         - ../values/monitoring.yaml
         - ../values/neuvector.yaml
         - ../values/tempo.yaml
+  - name: dubbd-post-upgrade
+    required: true
