ci: test with needs jobs

--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -17,6 +17,16 @@ on:
       - ".github/workflows/*uds*.y*ml"
 
 jobs:
+  yaml-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Lint YAML files
+        run: yamllint . -c .yamllint --no-warnings
   test-release:
+    needs: yaml-lint
+    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
     uses: ./.github/workflows/test-k3d-package.yaml
     secrets: inherit
