--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -21,10 +21,23 @@ on:
   workflow_call:
 
 jobs:
-    test-release:
-        uses: ./.github/workflows/test-dubbd-aws-install.yaml
-        secrets: inherit
+  yaml-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Lint YAML files
+        run: yamllint . -c .yamllint --no-warnings
 
-    test-upgrade:
-        uses: ./.github/workflows/test-dubbd-aws-upgrade.yaml
-        secrets: inherit
+  test-release:
+    needs: yaml-lint
+    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
+    uses: ./.github/workflows/test-dubbd-aws-install.yaml
+    secrets: inherit
+
+  test-upgrade:
+    needs: yaml-lint
+    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
+    uses: ./.github/workflows/test-dubbd-aws-upgrade.yaml
+    secrets: inherit
