--- a/.github/workflows/ci-on-pull-request-uds-core-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-uds-core-aws.yaml
@@ -12,9 +12,19 @@ on:
   workflow_call:
 
 jobs:
-    test-release:
-        uses: ./.github/workflows/test-uds-core-aws-install.yaml
-        secrets: inherit
+  yaml-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Lint YAML files
+        run: yamllint . -c .yamllint --no-warnings
+  test-release:
+    needs: yaml-lint
+    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
+    uses: ./.github/workflows/test-uds-core-aws-install.yaml
+    secrets: inherit
 
 # commenting out for now because uds-core-aws has not been published yet
 #    test-upgrade:
