--- a/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
+++ b/.github/workflows/ci-on-pull-requests-cloudtrail.yaml
@@ -15,7 +15,18 @@ permissions:
   contents: read
 
 jobs:
+  yaml-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Lint YAML files
+        run: yamllint . -c .yamllint --no-warnings
+
   test-cloudtrail-tf:
+    needs: yaml-lint
+    if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
     runs-on: ubuntu-latest
     defaults:
       run:
