feat: updated velero values to set backupstoragelocation use correct region
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/aws/values/aws-velero.yaml
+++ b/aws/values/aws-velero.yaml
@@ -10,7 +10,8 @@ addons:
         backupStorageLocation:
           bucket:  "###ZARF_VAR_VELERO_S3_BUCKET###"
           caCert: null
-          config: { }
+          config: 
+            region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
           name: null
           prefix: null
           provider: aws
