--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -11,6 +11,11 @@ istio:
     meshConfig:
       meshMTLS:
         minProtocolVersion: TLSV1_3
+      extensionProviders:
+        - name: "authservice"
+          envoyExtAuthzGrpc:
+            service: "authservice.authservice.svc.cluster.local"
+            port: "10003"
     istiod:
       resources:
         requests:
